k8s/config-map.yaml
apiVersion: v1
kind: Pod
metadata:
  name: registry
spec:
  containers:
  - name: registry
    image: registry
    env: ## using Downward API to pass envs or values to inside the container
    - name: REGISTRY_HTTP_ADDR 
      valueFrom:
        configMapKeyRef:
          name: registry
          key: http.addr
