k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: vote
---
apiVersion: v1
kind: Service
metadata:
  name: worker
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: worker
---
apiVersion: v1
kind: Service
metadata:
  name: result
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: result
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  ports:
  - port: 5432
  selector:
    app: postgres
  type: LoadBalancer
